test/compilable/dtoh_VarDeclaration.d
/*
REQUIRED_ARGS: -HC -c -o-
PERMUTE_ARGS:
TEST_OUTPUT:
---
// Automatically generated by Digital Mars D Compiler v$n$

#pragma once

#include <stddef.h>
#include <stdint.h>


// ignoring variable dtoh_VarDeclaration.x because of linkage
// ignoring variable dtoh_VarDeclaration.y because of linkage
extern "C" int32_t z;

extern int32_t t;

struct S;

struct S2;

// ignoring non-cpp class C
class C2;

union U;

union U2;
---
*/

int x = 42;

extern int y;

extern (C) int z;

extern (C++) __gshared int t;

extern (C) struct S;

extern (C++) struct S2;

extern (C) class C;

extern (C++) class C2;

extern (C) union U;

extern (C++) union U2;
